# ReqSpector

./: .gitignore  README.md  ascii_art.txt  llm_provider.py  main.py  prompt.py  pyproject.toml  requirements.txt
