[project]
name = "diconium"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-anthropic>=0.3.19",
    "langchain-community>=0.3.29",
    "langchain-groq>=0.3.7",
    "langchain-ollama>=0.3.7",
    "langchain-openai>=0.3.32",
    "prompt-toolkit>=3.0.52",
    "rich>=14.1.0",
]
